--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <div class="hero-content">
           <div class="content-wrapper" data-aos="fade-up" data-aos-delay="100">
             <h1 class="hero-title">Votre Espace de Rêve Commence Ici</h1>
-            <p class="hero-description">Explorez nos collections exclusives pour la salle de bain et la cuisine. Design, qualité et innovation pour transformer votre intérieur.</p>
+            <p class="hero-description">Explorez nos collections exclusives pour la salle de bain. Design, qualité et innovation pour transformer votre intérieur.</p>
             <div class="hero-actions" data-aos="fade-up" data-aos-delay="200">
               <a href="#products" class="btn-primary">Voir Nos Produits</a>
               <a href="#categories" class="btn-secondary">Parcourir les Catégories</a>
@@ -71,12 +71,12 @@
         <div class="col-lg-6">
           <div class="category-featured" data-aos="fade-right" data-aos-delay="200">
             <div class="category-image">
-              <img src="assets/img/cuisine/christian-mackie-cc0Gg3BegjE-unsplash.jpg" alt="Cuisine Moderne" class="img-fluid">
+              <img src="assets/img/bain/photo-1729073376204-5d7d25b9226f.avif" alt="Cabine de douche Moderne" class="img-fluid">
             </div>
             <div class="category-content">
               <span class="category-tag">Tendance 2025</span>
-              <h2>Nouvelle Collection Cuisine</h2>
-              <p>Découvrez nos derniers designs de robinetterie et d'éviers pour une cuisine à la fois fonctionnelle et élégante.</p>
+              <h2>Nouvelle Collection Cabines de Douche</h2>
+              <p>Découvrez nos dernières cabines et finitions pour une salle de bain moderne et élégante.</p>
               <a href="#" class="btn-shop">Explorer la Collection <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
