--- a/src/app/rendezvous/rendezvous.component.html
+++ b/src/app/rendezvous/rendezvous.component.html
@@ -22,7 +22,7 @@
             <div class="col-lg-10">
                 <div class="contact-form-wrapper">
                     <h2 class="text-center mb-4">Planifiez Votre Visite</h2>
-                    <p class="text-center mb-5">Remplissez le formulaire ci-dessous pour réserver une consultation personnalisée avec nos experts en design de salle de bain et cuisine.</p>
+                    <p class="text-center mb-5">Remplissez le formulaire ci-dessous pour réserver une consultation personnalisée avec nos experts en design de salle de bain.</p>
 
                     <form action="#" method="post" class="php-email-form">
                         <div class="row g-4">
