--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- The header and footer are now part of the main shell -->
 <header id="header" class="header sticky-top">
   <!-- Top Bar -->
-  <div class="top-bar py-2">
+  <!-- <div class="top-bar py-2">
     <div class="container-fluid container-xl">
       <div class="row align-items-center">
         <div class="col-lg-4 d-none d-lg-flex">
@@ -61,7 +61,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Main Header -->
   <div class="main-header">
@@ -97,7 +97,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Accueil</a></li>
-          <li><a routerLink="/about" routerLinkActive="active">À Propos</a></li>
+          <li><a routerLink="/about" routerLinkActive="active">À propos</a></li>
           <li><a routerLink="/category" routerLinkActive="active">Cabine de Douche</a></li>
           <li><a routerLink="/rendezvous" routerLinkActive="active">Prendre un Rendez-vous</a></li>
           <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
